Try with cibuildwheel==2.12.0 on Linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,10 +35,9 @@ jobs:
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
         python -m pip install --upgrade cibuildwheel==1.12.0
-        # CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
-        # python -m pip install --upgrade cibuildwheel==2.0.0
+        CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
+        python -m pip install --upgrade cibuildwheel==2.12.0
         cibuildwheel --platform linux --output-dir $TMP .
-        pip install cibuildwheel==1.12.0
         ls -l $TMP
         test "$(ls -A $TMP)" || exit 1
         mv $TMP/* $WHEELHOUSE/
