--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,7 @@ variables:
   CIBW_SKIP: pp* cp27-* *_i686 *-win32 *musllinux*
   CIBW_TEST_REQUIRES: --index-url https://pypi.ampl.com --extra-index-url https://pypi.org/simple amplpy ampl_module_base
   CIBW_ENVIRONMENT: AMPLKEY_UUID=$(AMPLKEY_UUID)
+  CIBW_ENVIRONMENT_PASS_LINUX: AMPLKEY_UUID
 
 jobs:
 - job: linux
