Renamed cplexmp to cplex

--- a/csharp/ampls/CMakeLists.txt
+++ b/csharp/ampls/CMakeLists.txt
@@ -6,8 +6,8 @@ set(LINK_LIBS "")
 foreach(s ${AMPLS_SOLVER_NAMES})
     if(ENABLE_${s})
         get_target_property(libinclude ${${s}_SOLVER}-solverlib INTERFACE_INCLUDE_DIRECTORIES)
-        get_target_property(targetinclude ${${s}_TARGET}-drv INTERFACE_INCLUDE_DIRECTORIES)
-        set(LINK_LIBS ${LINK_LIBS} ${${s}_TARGET}-lib ${${s}_TARGET}-drv)
+        get_target_property(targetinclude ${${s}_SOLVER}-drv INTERFACE_INCLUDE_DIRECTORIES)
+        set(LINK_LIBS ${LINK_LIBS} ${${s}_TARGET}-lib ${${s}_SOLVER}-drv)
         set(SOLVERS_INCLUDE ${SOLVERS_INCLUDE} ${libinclude} ${targetinclude})
     endif()
 endforeach()
