Porting more names to amplpy_cplex

--- a/python/cplex/CMakeLists.txt
+++ b/python/cplex/CMakeLists.txt
@@ -1,2 +1,2 @@
 include("../createPythonWrapper.cmake")
-createPythonWrapper(cplex cplex cplexmp cplexmp) 
+createPythonWrapper(cplex cplex cplexmp cplex) 
