--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,8 @@ jobs:
         bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
+        # python -m pip install --upgrade cibuildwheel==1.12.0
+        # CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
         python -m pip install --upgrade cibuildwheel==2.12.3
         cibuildwheel --platform linux --output-dir $TMP .
         ls -l $TMP
@@ -134,8 +134,8 @@ jobs:
         bash swig.sh
         python -m pip install --user --upgrade pip
         python -m pip install urllib3[secure] --upgrade
-        python -m pip install --upgrade cibuildwheel==1.12.0
-        CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir $TMP .
+        # python -m pip install --upgrade cibuildwheel==1.12.0
+        # CIBW_BUILD="cp35-*" cibuildwheel --platform windows --output-dir $TMP .
         python -m pip install --upgrade cibuildwheel==2.12.3
         cibuildwheel --platform windows --output-dir $TMP .
         ls -l $TMP
