--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 __pycache__
 bin
 obj
+env/
 /csharp/cplex/api/dev_cpxsharp.csproj
 /csharp/cplex/api/dev_cplexsharp.csproj
 /csharp/gurobi/api/dev_gurobisharp.csproj
