--- a/cpp/ampls/CMakeLists.txt
+++ b/cpp/ampls/CMakeLists.txt
@@ -84,7 +84,7 @@ if(PREPROCESSORDEFS)
         addExample(${e} ampls ${ampls_DIR}/examples/${e}.cpp)
     endforeach()
     if(BUILD_AMPLAPI_EXAMPLES)
-      foreach(e cuttingStock addEntities tsp multipleModels)
+      foreach(e cuttingStock addEntities tsp multipleModels multipleSolutions)
         addExample(${e} ampls ${ampls_DIR}/examples/${e}.cpp)
         target_link_libraries(ampls-${e} PRIVATE amplapi)
         target_compile_definitions(ampls-${e} PRIVATE USE_amplapi)
