Fixed mapping of enum in BaseCallback.get_ampls_where and getAMPLSWhere. Updated tests and added to future libs.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ amplpy_*_swig_wrap.h
 /python/cplex/amplpy_cplex/swig/amplpy_cplex_swig.py
 /python/cplex/amplpy_cplex/swig/amplpy_cplex_swig_wrap.h
 /csharp/xpress/api/dev_xpresssharp.csproj
+/python/envlinux
