--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,101 +4,101 @@ variables:
   CIBW_ENVIRONMENT_PASS_LINUX: AMPLKEY_UUID
 
 jobs:
-- job: linux
-  pool: {vmImage: 'ubuntu-latest'}
-  strategy:
-    matrix:
-      gurobi:
-        solver: 'gurobi'
-        CIBW_TEST_COMMAND: python -m amplpy_gurobi.tests
-      cplex:
-        solver: 'cplex'
-        CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
-        CIBW_TEST_COMMAND: python -m amplpy_cplex.tests
-      xpress:
-        solver: 'xpress'
-        CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
-        CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
-  variables:
-    wheelhouse: $(Build.ArtifactStagingDirectory)
-  steps:
-    - task: UsePythonVersion@0
-    # - script: |
-    #     sudo apt-get install swig
-    #   displayName: Install SWIG
-    - bash: |
-        bash libs/download.sh
-      displayName: Download libraries
-    - bash: |
-        set -ex
-        mkdir -p tmp
-        TMP=`pwd`/tmp
-        cp support/twine.sh $WHEELHOUSE/twine.sh
-        cd python/$SOLVER
-        bash prepare.sh linux64
-        bash swig.sh
-        pip install --upgrade pip
-        pip install urllib3[secure] --upgrade
-        # python -m pip install --upgrade cibuildwheel==1.12.0
-        # CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
-        python -m pip install --upgrade cibuildwheel==2.12.3
-        cibuildwheel --platform linux --output-dir $TMP .
-        ls -l $TMP
-        test "$(ls -A $TMP)" || exit 1
-        mv $TMP/* $WHEELHOUSE/
-        bash prepare.sh # to package libs for all platforms
-        python setup.py sdist -d $WHEELHOUSE
-        # pip install twine
-        # twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/* || true
-      env:
-        CIBW_ENVIRONMENT: AMPLKEY_UUID=$(AMPLKEY_UUID)
-      displayName: Build wheels
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
-- job: macos
-  pool: {vmImage: 'macOS-latest'}
-  strategy:
-    matrix:
-      gurobi:
-        solver: 'gurobi'
-        CIBW_TEST_COMMAND: python -m amplpy_gurobi.tests
-      cplex:
-        solver: 'cplex'
-        CIBW_TEST_COMMAND: python -m amplpy_cplex.tests
-      xpress:
-        solver: 'xpress'
-        CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
-  variables:
-    wheelhouse: $(Build.ArtifactStagingDirectory)
-  steps: 
-    - task: UsePythonVersion@0
-    # - script: |
-    #     brew install swig
-    #   displayName: Install SWIG
-    - bash: |
-        bash libs/download.sh
-      displayName: Download libraries
-    - bash: |
-        set -ex
-        mkdir -p tmp
-        TMP=`pwd`/tmp
-        cd python/$SOLVER
-        bash prepare.sh osx64
-        bash swig.sh
-        pip install --upgrade pip
-        pip install urllib3[secure] --upgrade
-        python -m pip install --upgrade cibuildwheel==2.12.3
-        cibuildwheel --platform macos --output-dir $TMP .
-        ls -l $TMP
-        test "$(ls -A $TMP)" || exit 1
-        mv $TMP/* $WHEELHOUSE/
-        # pip install twine
-        # twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
-      env:
-        CIBW_ENVIRONMENT: AMPLKEY_UUID=$(AMPLKEY_UUID)
-      displayName: Build wheels
-    - task: PublishBuildArtifacts@1
-      inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
+# - job: linux
+#   pool: {vmImage: 'ubuntu-latest'}
+#   strategy:
+#     matrix:
+#       gurobi:
+#         solver: 'gurobi'
+#         CIBW_TEST_COMMAND: python -m amplpy_gurobi.tests
+#       cplex:
+#         solver: 'cplex'
+#         CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
+#         CIBW_TEST_COMMAND: python -m amplpy_cplex.tests
+#       xpress:
+#         solver: 'xpress'
+#         CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
+#         CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
+#   variables:
+#     wheelhouse: $(Build.ArtifactStagingDirectory)
+#   steps:
+#     - task: UsePythonVersion@0
+#     # - script: |
+#     #     sudo apt-get install swig
+#     #   displayName: Install SWIG
+#     - bash: |
+#         bash libs/download.sh
+#       displayName: Download libraries
+#     - bash: |
+#         set -ex
+#         mkdir -p tmp
+#         TMP=`pwd`/tmp
+#         cp support/twine.sh $WHEELHOUSE/twine.sh
+#         cd python/$SOLVER
+#         bash prepare.sh linux64
+#         bash swig.sh
+#         pip install --upgrade pip
+#         pip install urllib3[secure] --upgrade
+#         # python -m pip install --upgrade cibuildwheel==1.12.0
+#         # CIBW_BUILD="cp35-*" cibuildwheel --platform linux --output-dir $TMP .
+#         python -m pip install --upgrade cibuildwheel==2.12.3
+#         cibuildwheel --platform linux --output-dir $TMP .
+#         ls -l $TMP
+#         test "$(ls -A $TMP)" || exit 1
+#         mv $TMP/* $WHEELHOUSE/
+#         bash prepare.sh # to package libs for all platforms
+#         python setup.py sdist -d $WHEELHOUSE
+#         # pip install twine
+#         # twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/* || true
+#       env:
+#         CIBW_ENVIRONMENT: AMPLKEY_UUID=$(AMPLKEY_UUID)
+#       displayName: Build wheels
+#     - task: PublishBuildArtifacts@1
+#       inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
+# - job: macos
+#   pool: {vmImage: 'macOS-latest'}
+#   strategy:
+#     matrix:
+#       gurobi:
+#         solver: 'gurobi'
+#         CIBW_TEST_COMMAND: python -m amplpy_gurobi.tests
+#       cplex:
+#         solver: 'cplex'
+#         CIBW_TEST_COMMAND: python -m amplpy_cplex.tests
+#       xpress:
+#         solver: 'xpress'
+#         CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
+#   variables:
+#     wheelhouse: $(Build.ArtifactStagingDirectory)
+#   steps: 
+#     - task: UsePythonVersion@0
+#     # - script: |
+#     #     brew install swig
+#     #   displayName: Install SWIG
+#     - bash: |
+#         bash libs/download.sh
+#       displayName: Download libraries
+#     - bash: |
+#         set -ex
+#         mkdir -p tmp
+#         TMP=`pwd`/tmp
+#         cd python/$SOLVER
+#         bash prepare.sh osx64
+#         bash swig.sh
+#         pip install --upgrade pip
+#         pip install urllib3[secure] --upgrade
+#         python -m pip install --upgrade cibuildwheel==2.12.3
+#         cibuildwheel --platform macos --output-dir $TMP .
+#         ls -l $TMP
+#         test "$(ls -A $TMP)" || exit 1
+#         mv $TMP/* $WHEELHOUSE/
+#         # pip install twine
+#         # twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
+#       env:
+#         CIBW_ENVIRONMENT: AMPLKEY_UUID=$(AMPLKEY_UUID)
+#       displayName: Build wheels
+#     - task: PublishBuildArtifacts@1
+#       inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
 - job: windows
   pool: {vmImage: 'windows-latest'}
   strategy:
@@ -125,8 +125,9 @@ jobs:
     - bash: |
         bash libs/download.sh
       displayName: Download libraries
-    - script: |
-        md tmp
+    - bash: |
+        set -ex
+        mkdir -p tmp
         cd python/$SOLVER
         bash prepare.sh win64
         bash swig.sh
@@ -134,7 +135,7 @@ jobs:
         python -m pip install urllib3[secure] --upgrade
         python -m pip install --upgrade cibuildwheel==2.12.3
         cibuildwheel --platform windows --output-dir tmp .
-        copy tmp/* $WHEELHOUSE/
+        cp tmp/* $WHEELHOUSE/
         # python -m pip install twine
         # python -m twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
       env:
