Updated no-license handling

--- a/cpp/ampls/CMakeLists.txt
+++ b/cpp/ampls/CMakeLists.txt
@@ -41,13 +41,14 @@ foreach(s ${ENABLED_SOLVERS})
  # Find amplapi, if present add combined examples
 if(WIN32)
   set(libdir win64)
-  set(libname "ampl-2.0.6.0.lib")
-  set(dllname "ampl-2.0.6.0.dll")
+  set(libname ampl-2.1.0.lib)
+  set(dllname ampl-2.1.0.dll)
 elseif(APPLE)
   set(libdir osx64)
+  set(libname libampl.2.1.0.dylib)
 else()
  set(libdir linux64)
- set(libname "libampl.so.2.0.6.0")
+ set(libname libampl.so.2.1.0)
 endif()
 set(AMPLAPIDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../libs/amplapi/${libdir})
 if(EXISTS ${AMPLAPIDIR}/lib)
