Python now throws ampls.AMPLSolverException(s).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,7 @@ function(AddSolverStub solver targetbase libname)
           add_custom_target(${solver}-common SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cpp/ampls/swig/ampls-common.i
                                                       ${DIR_SWIG}/${libname}-common.i
                                                       ${CMAKE_CURRENT_SOURCE_DIR}/python/common-python.i
+                                                      ${CMAKE_CURRENT_SOURCE_DIR}/python/exceptions-python.i
                                                       ${CMAKE_CURRENT_SOURCE_DIR}/python/common-python-extensions.i
                                                       ${CMAKE_CURRENT_SOURCE_DIR}/python/createPythonWrapper.cmake
                                                       ${CMAKE_CURRENT_SOURCE_DIR}/csharp/createCsharpProject.cmake
