Test building copt

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,10 @@ jobs:
         solver: 'xpress'
         CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
         CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
+      copt:
+        solver: 'copt'
+        CIBW_MANYLINUX_X86_64_IMAGE: 'manylinux2014'
+        CIBW_TEST_COMMAND: python -m amplpy_copt.tests
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps:
@@ -68,6 +72,9 @@ jobs:
       xpress:
         solver: 'xpress'
         CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
+      copt:
+        solver: 'copt'
+        CIBW_TEST_COMMAND: python -m amplpy_copt.tests
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps:
@@ -112,6 +119,9 @@ jobs:
       xpress:
         solver: 'xpress'
         CIBW_TEST_COMMAND: python -m amplpy_xpress.tests
+      copt:
+        solver: 'copt'
+        CIBW_TEST_COMMAND: python -m amplpy_copt.tests
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps:
