--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,10 +1,16 @@
+# Read the Docs configuration file for Sphinx projects
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
 version: 2
 
-python:
-  version: "3.8"
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
 
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
-   configuration: doc/rst/conf.py
+  configuration: doc/rst/conf.py
 
 python:
    install:
