Docs: use ampl-sphinx-theme directly from github

--- a/doc/rst/requirements.txt
+++ b/doc/rst/requirements.txt
@@ -1,4 +1,4 @@
 breathe==4.33.1
 sphinx==4.2.0
-ampl-sphinx-theme
 myst-parser
+ampl-sphinx-theme @ git+https://github.com/ampl/ampl.github.io.git#subdirectory=ampl-sphinx-theme
